--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="content">
       <h1>Wir<br>heiraten!</h1>
       <h3>Am 08. Oktober 2022 ist es <br> endlich soweit.</h3>
-      <p>Liebe Gäste, zu unserer Hochzeit am 08. Oktober 2022 <br> laden wir euch recht herzlich ins schöne Allgäu ein! <br> Liebe Grüße, Caro und Gregor</p>
+      <p>Liebe Gäste, <br> zu unserer Hochzeit am 08. Oktober 2022 <br> laden wir euch recht herzlich ins schöne <br> Allgäu ein! <br> Liebe Grüße, Caro und Gregor</p>
       <button type="button">Hochzeitseinladung</button>
     </div>
     
