--- a/einladung.html
+++ b/einladung.html
@@ -16,30 +16,40 @@
 
 </head> 
 <body>
+
   <div class="hero">
+
     <header>
       <nav>
-        <h2 class="logo">Einladung</h2>
-        <ul>
-          <li><a href="home.html">Home</a></li>
-          <li><a href="einladung.html">Einladung</a></li>
-          <li><a href="#">Locations</a></li>
-          <li><a href="#">Unterkunft</a></li>
-          <li><a href="#">Trauzeugen</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-        <a href="#" class="btn">Terminkalender-Eintrag</a>
+          <div class="logo-container">
+
+              <label class="logo-txt">Hochzeitseinladung</label>
+          </div>
+          
+          <input type="checkbox" id="check">
+          <label for="check" class="hamburger-btn">
+              <i class="fas fa-bars"></i>
+          </label>
+          <ul class="nav-list">
+              <li><a href="index.html">Home</a></li>
+              <li><a class="active" href="einladung.html">Einladung</a></li>
+              <li><a href="#">Unterkunft</a></li>
+              <li><a href="#">Trauzeugen</a></li>
+              <li><a href="#">Kontakt</a></li>
+
+          </ul>
       </nav>
-    </header>
+  </header>
 
     <div class="bg">
-      <img src="img/home_v2.png">
+      <img src="img/home_v9.png">
     </div>
 
-    <div class="content">
+    <div class="content_einladung">
       <h1>Wir sagen<br>Ja!</h1>
-      <h3>Einladung zu unserer kirchlichen Trauung und anschließender Feier am 08.10.2022:</h3>
-      <p>Die Trauung findet in der St. Mang Kirche in Kempten statt. (St. Mang Platz 4, 87435 Kempten).<br> Im Anschluss möchten wir mit euch in Wiggensbach im Hotel Mäsers (Marktplatz 1, 87487 Wiggensbach) Anstoßen, Feiern und Tanzen. <br> Um uns das Planen zu erleichtern, bitte wir um eure Antwort bis spätestens 31.07.2022. <br> Gute Ideen oder Beiträge an unserer Feier? Bitte wendet euch gerne an unsere Trauzeugen.<br> Wir freuen uns auf Euer kommen. <br> Liebe Grüße, Caro und Gregor</p>
+      <h3>Einladung zu unserer kirchlichen Trauung <br> und anschließender Feier <br> am 08.10.2022:</h3>
+      <p>Die Trauung findet in der St. Mang Kirche <br> in Kempten statt. <br>(St. Mang Platz 4, 87435 Kempten).<br> Im Anschluss möchten wir mit euch <br> in Wiggensbach im Hotel Mäsers <br> (Marktplatz 1, 87487 Wiggensbach) <br> Anstoßen, Feiern und Tanzen. <br> Um uns das Planen zu erleichtern, bitte wir <br> um eure Antwort bis spätestens 31.07.2022. <br> Gute Ideen oder Beiträge an unserer Feier? <br> Bitte wendet euch gerne an unsere <br> Trauzeugen.<br> Wir freuen uns auf Euer kommen. <br> Liebe Grüße, Caro und Gregor</p>
+      
       <button type="button">Weiter zu Locations</button>
     </div>
 
@@ -47,11 +57,11 @@
       <p>"Die Ehe ist und bleibt die schönste Entdeckungsreise, <br> die der Mensch unternehmen kann."</p>  
     </div>
   
-    <div class="social">
+    <div class="social_einladung">
       <ul>
         <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-        <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
+        <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
       </ul>
     </div>
   </div>
