--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <i class="fas fa-bars"></i>
           </label>
           <ul class="nav-list">
-              <li><a class="active" href="home.html">Home</a></li>
+              <li><a class="active" href="index.html">Home</a></li>
               <li><a href="einladung.html">Einladung</a></li>
               <li><a href="#">Unterkunft</a></li>
               <li><a href="#">Trauzeugen</a></li>
