--- a/einladung.html
+++ b/einladung.html
@@ -33,7 +33,9 @@
           <ul class="nav-list">
               <li><a href="index.html">Home</a></li>
               <li><a class="active" href="einladung.html">Einladung</a></li>
-              <li><a href="#">Unterkunft</a></li>
+              <li><a href="#">Tagesablauf</a></li>
+              <li><a href="#">Locations</a></li>
+              <li><a href="#">Übernachtung</a></li>
               <li><a href="#">Trauzeugen</a></li>
               <li><a href="#">Kontakt</a></li>
 
@@ -42,7 +44,7 @@
   </header>
 
     <div class="bg">
-      <img src="img/home_v9.png">
+      <img src="img/Unbenannt-1.png">
     </div>
 
     <div class="content_einladung">
@@ -54,7 +56,7 @@
     </div>
 
     <div class="slogan">
-      <p>"Die Ehe ist und bleibt die schönste Entdeckungsreise, <br> die der Mensch unternehmen kann."</p>  
+      <p>"Die Ehe ist und bleibt die <br> schönste Entdeckungsreise, <br> die der Mensch unternehmen kann."</p>  
     </div>
   
     <div class="social_einladung">
