--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
           <ul class="nav-list">
               <li><a class="active" href="index.html">Home</a></li>
               <li><a href="einladung.html">Einladung</a></li>
-              <li><a href="#">Unterkunft</a></li>
+              <li><a href="#">Tagesablauf</a></li>
+              <li><a href="#">Locations</a></li>
+              <li><a href="#">Übernachtung</a></li>
               <li><a href="#">Trauzeugen</a></li>
               <li><a href="#">Kontakt</a></li>
 
