--- a/einladung.html
+++ b/einladung.html
@@ -33,8 +33,7 @@
           <ul class="nav-list">
               <li><a href="index.html">Home</a></li>
               <li><a class="active" href="einladung.html">Einladung</a></li>
-              <li><a href="#">Tagesablauf</a></li>
-              <li><a href="#">Locations</a></li>
+              <li><a href="tagesablauf.html">Tagesablauf</a></li>
               <li><a href="#">Übernachtung</a></li>
               <li><a href="#">Trauzeugen</a></li>
               <li><a href="#">Kontakt</a></li>
@@ -52,7 +51,7 @@
       <h3>Einladung zu unserer kirchlichen Trauung <br> und anschließender Feier <br> am 08.10.2022:</h3>
       <p>Die Trauung findet in der St. Mang Kirche <br> in Kempten statt. <br>(St. Mang Platz 4, 87435 Kempten).<br> Im Anschluss möchten wir mit euch <br> in Wiggensbach im Hotel Mäsers <br> (Marktplatz 1, 87487 Wiggensbach) <br> Anstoßen, Feiern und Tanzen. <br> Um uns das Planen zu erleichtern, bitte wir <br> um eure Antwort bis spätestens 31.07.2022. <br> Gute Ideen oder Beiträge an unserer Feier? <br> Bitte wendet euch gerne an unsere <br> Trauzeugen.<br> Wir freuen uns auf Euer kommen. <br> Liebe Grüße, Caro und Gregor</p>
       
-      <button type="button">Weiter zu Locations</button>
+      <button type="button">Weiter zum Tagesablauf</button>
     </div>
 
     <div class="slogan">
