add tagesablauf content

--- a/tagesablauf.html
+++ b/tagesablauf.html
@@ -86,6 +86,16 @@
             <h3>Shuttle #2</h3>
             <p>Wir bieten euch einen Shuttle-Service nachts zum Hotel an. Don't drink and drive!</p>
         </div>
+
+        </div>
+
+    <div class="content_anfahrt">
+            <h1>Anfahrt</h1>
+
+            <h3>Wegbeschreibung und Adressen</h3>
+
+        </div>
+       
   
 <!--     <div class="social_einladung">
       <ul>
