add content anfahrt

--- a/tagesablauf.html
+++ b/tagesablauf.html
@@ -87,12 +87,22 @@
             <p>Wir bieten euch einen Shuttle-Service nachts zum Hotel an. Don't drink and drive!</p>
         </div>
 
-        </div>
+    </div>
+    </div>
 
     <div class="content_anfahrt">
             <h1>Anfahrt</h1>
 
-            <h3>Wegbeschreibung und Adressen</h3>
+            <h3>Wegbeschreibung und Adressen:</h3>
+
+            <div class="box-container">
+                <div class="box">
+                    <img src="img/cheers.png">
+                </div>
+
+
+
+            </div>
 
         </div>
        
