--- a/einladung.html
+++ b/einladung.html
@@ -43,7 +43,7 @@
   </header>
 
     <div class="bg">
-      <img src="img/Unbenannt-1.png">
+      <img src="img/home_v9.png">
     </div>
 
     <div class="content_einladung">
