--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Hochzeitseinlaudng</title>
+	<title>Hochzeitseinladung</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
