--- a/tagesablauf.html
+++ b/tagesablauf.html
@@ -46,6 +46,8 @@
       <img src="img/home_v9.png">
     </div>
 
+<!-- Tagesablauf -->
+
     <div class="content_tagesablauf">
       <h1>Tages- <br> ablauf</h1>
 
@@ -97,28 +99,40 @@
     </div>
     </div>
 
-    <div class="container_anfahrt"></div>
-    <h1>Adressen:</h1>
+<!-- Anfahrt -->
 
-    <div class="box1">
-      <i class="fas fa-shuttle-van"></i>
-      <h2>Mäsers</h2>
-      <p>Test Test Test Test Test</p>
-    </div>
+<div class="content_anfahrt">
+<h1>Anfahrt</h1>
+<h3>Wegbeschreibung und Google Maps Links</h3>
+ <div class="anfahrt-content">
+      <!-- Box 1 -->
+      <div class="anfahrt-box">
+          <i class='bx bx-code-alt' ></i>
+          <h3>Allgäuherz <br>Mäsers</h3>
+          <a href="#">Maps-Link</a>
+      </div>
+      <!-- Box 2 -->
+      <div class="anfahrt-box">
+          <i class='bx bx-server' ></i>
+          <h3>Backend <br>Development</h3>
+          <a href="#">Learn More</a>
+      </div>
+      <!-- Box 3 -->
+      <div class="anfahrt-box">
+          <i class='bx bx-brush' ></i>
+          <h3>UI/UX <br>Design</h3>
+          <a href="#">Learn More</a>
+      </div>
+      <!-- Box 4 -->
+      <div class="anfahrt-box">
+          <i class='bx bx-brush' ></i>
+          <h3>UI/UX <br>Design</h3>
+          <a href="#">Learn More</a>
 
-    <div class="box2">
-      <i class="fas fa-shuttle-van"></i>
-      <h2>Mäsers</h2>
-      <p>Test Test Test Test Test</p>
-    </div>
+      </div>
+  </div>
 
-    <div class="box3">
-      <i class="fas fa-shuttle-van"></i>
-      <h2>Mäsers</h2>
-      <p>Test Test Test Test Test</p>
-    </div>
-
-
+</div>
   
 <!--     <div class="social_einladung">
       <ul>
