--- a/tagesablauf.html
+++ b/tagesablauf.html
@@ -51,7 +51,7 @@
     <div class="content_tagesablauf">
       <h1>Tages- <br> ablauf</h1>
 
-      <h3>Nachfolgend unser vorläufiger Tagesablauf für euch zusammengefasst:</h3>
+      <h3>Nachfolgend unser Tagesablauf für euch zusammengefasst:</h3>
 
       <div class="box-container">
         <div class="box">
@@ -103,31 +103,36 @@
 
 <div class="content_anfahrt">
 <h1>Anfahrt</h1>
-<h3>Wegbeschreibung und Google Maps Links</h3>
+<h3>Wegbeschreibung und Google Maps:</h3>
  <div class="anfahrt-content">
+   
       <!-- Box 1 -->
       <div class="anfahrt-box">
-          <i class='bx bx-code-alt' ></i>
-          <h3>Allgäuherz <br>Mäsers</h3>
-          <a href="#">Maps-Link</a>
+        <i class="fas fa-church"></i>
+          <h3>St. Mang Kirche Kempten</h3>
+          <p>St.-Mang-Platz 4, 87435 Kempten</p>
+          <a href="https://www.google.de/maps/place/St.-Mang-Kirche/@47.7257913,10.3187387,351m/data=!3m1!1e3!4m5!3m4!1s0x479c790e0fee727b:0x661a500633770d55!8m2!3d47.7256565!4d10.3194254)">Google Maps</a>
       </div>
       <!-- Box 2 -->
       <div class="anfahrt-box">
-          <i class='bx bx-server' ></i>
-          <h3>Backend <br>Development</h3>
-          <a href="#">Learn More</a>
+        <i class="fas fa-parking"></i>
+          <h3>Parkhaus am Rathaus</h3>
+          <p>Kronenstr. 16, 87435 Kempten</p>
+          <a href="#">Google Maps</a>
       </div>
       <!-- Box 3 -->
       <div class="anfahrt-box">
-          <i class='bx bx-brush' ></i>
-          <h3>UI/UX <br>Design</h3>
-          <a href="#">Learn More</a>
+        <i class="fas fa-glass-cheers"></i>
+          <h3>Mäser's Allgäuherz</h3>
+          <p>Marktpl. 1, 87487 Wiggensbach</p>
+          <a href="#">Google Maps</a>
       </div>
       <!-- Box 4 -->
       <div class="anfahrt-box">
-          <i class='bx bx-brush' ></i>
-          <h3>UI/UX <br>Design</h3>
-          <a href="#">Learn More</a>
+        <i class="fas fa-parking"></i>
+          <h3>Parkhaus am Marktplatz</h3>
+          <p>Marktpl. 5, 87487 Wiggensbach</p>
+          <a href="#">Google Maps</a>
 
       </div>
   </div>
