--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <li><a class="active" href="index.html">Home</a></li>
               <li><a href="einladung.html">Einladung</a></li>
               <li><a href="tagesablauf.html">Tagesablauf</a></li>
-              <li><a href="#">Übernachtung</a></li>
+              <li><a href="uebernachtung.html">Übernachtung</a></li>
               <li><a href="#">Trauzeugen</a></li>
               <li><a href="#">Kontakt</a></li>
 
