--- a/einladung.html
+++ b/einladung.html
@@ -35,7 +35,7 @@
               <li><a class="active" href="einladung.html">Einladung</a></li>
               <li><a href="tagesablauf.html">Tagesablauf</a></li>
               <li><a href="uebernachtung.html">Übernachtung</a></li>
-              <li><a href="#">Trauzeugen</a></li>
+              <li><a href="trauzeugen.html">Trauzeugen</a></li>
               <li><a href="#">Kontakt</a></li>
 
           </ul>
