--- a/tagesablauf.html
+++ b/tagesablauf.html
@@ -35,7 +35,7 @@
               <li><a href="einladung.html">Einladung</a></li>
               <li><a class="active" href="tagesablauf.html">Tagesablauf</a></li>
               <li><a href="uebernachtung.html">Übernachtung</a></li>
-              <li><a href="#">Trauzeugen</a></li>
+              <li><a href="trauzeugen.html">Trauzeugen</a></li>
               <li><a href="#">Kontakt</a></li>
 
           </ul>
@@ -51,7 +51,7 @@
     <div class="content_tagesablauf">
       <h1>Tages- <br> ablauf</h1>
 
-      <h3>Nachfolgend unser Tagesablauf für euch zusammengefasst:</h3>
+      <h3>Unser Tagesablauf für euch zusammengefasst:</h3>
 
       <div class="box-container">
         <div class="box">
