--- a/uebernachtung.html
+++ b/uebernachtung.html
@@ -36,7 +36,7 @@
               <li><a href="tagesablauf.html">Tagesablauf</a></li>
               <li><a class="active" href="uebernachtung.html">Übernachtung</a></li>
               <li><a href="trauzeugen.html">Trauzeugen</a></li>
-              <li><a href="#">Kontakt</a></li>
+              <li><a href="kontakt.html">Kontakt</a></li>
 
           </ul>
       </nav>
