--- a/einladung.html
+++ b/einladung.html
@@ -36,7 +36,7 @@
               <li><a href="tagesablauf.html">Tagesablauf</a></li>
               <li><a href="uebernachtung.html">Übernachtung</a></li>
               <li><a href="trauzeugen.html">Trauzeugen</a></li>
-              <li><a href="#">Kontakt</a></li>
+              <li><a href="kontakt.html">Kontakt</a></li>
 
           </ul>
       </nav>
@@ -55,7 +55,7 @@
     </div>
 
     <div class="slogan">
-      <p>"Die Ehe ist und bleibt die <br> schönste Entdeckungsreise, <br> die der Mensch unternehmen kann."</p>  
+      <p>"Die Ehe ist und bleibt die schönste <br> Entdeckungsreise, die der Mensch <br> unternehmen kann."</p>  
     </div>
   
     <div class="social_einladung">
