--- a/uebernachtung.html
+++ b/uebernachtung.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Hochzeitseinlaudng</title>
+	<title>Hochzeitseinladung</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,10 +13,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 </head> 
 <body>
-
   <div class="hero">
 
     <header>
@@ -34,7 +34,7 @@
               <li><a href="index.html">Home</a></li>
               <li><a href="einladung.html">Einladung</a></li>
               <li><a href="tagesablauf.html">Tagesablauf</a></li>
-              <li><a class="active" href="uebernachtung.html">Übernachtung</a></li>
+              <li><a class ="active" href="uebernachtung.html">Übernachtung</a></li>
               <li><a href="trauzeugen.html">Trauzeugen</a></li>
               <li><a href="kontakt.html">Kontakt</a></li>
 
@@ -46,7 +46,7 @@
       <img src="img/home_v9.png">
     </div>
 
-<!-- Übernachtung -->
+    <!-- Übernachtung -->
 
 <div class="content_uebernachtung">
   <h1>Hotels</h1>
@@ -55,42 +55,44 @@
      
         <!-- Box 1 -->
         <div class="uebernachtung-box">
-          <i class="fas fa-h-square"></i>
+          <div class="uebernachtung-img">
+            <img src="img/fuerstenhof.png">
+          </div>
             <h3>Hotel Fürstenhof Kempten</h3>
             <p>Rathauspl. 8, 87435 Kempten</p>
+            <i class="fas fa-h-square"></i>
             <a href="https://www.fuerstenhof-kempten.de/">Homepage</a>
+            <i class="fas fa-map-marked"></i>
             <a href="https://www.google.de/maps/place/St.-Mang-Kirche/@47.7257913,10.3187387,351m/data=!3m1!1e3!4m5!3m4!1s0x479c790e0fee727b:0x661a500633770d55!8m2!3d47.7256565!4d10.3194254)">Google Maps</a>
-        </div>
+            <i class="fas fa-envelope"></i>
+            <p2>info@fuerstenhof-kempten.de</p2>
 
+            <i class="fas fa-phone"></i>
+            <p2>+49 (0)831 2536-0</p2>
+        </div>
         <!-- Box 2 -->
         <div class="uebernachtung-box">
-          <i class="fas fa-h-square"></i>
+          <div class="uebernachtung-img">
+            <img src="img/Maeser-LogoAllgaeuherz.png">
+          </div>
             <h3>Hotel Mäser's Allgäuherz</h3>
             <p>Marktpl. 1, 87487 Wiggensbach</p>
+            <i class="fas fa-h-square"></i>
             <a href="https://www.allgaeuherz.de/">Homepage</a>
+            <i class="fas fa-map-marked"></i>
             <a href="https://www.google.de/maps/place/St.-Mang-Kirche/@47.7257913,10.3187387,351m/data=!3m1!1e3!4m5!3m4!1s0x479c790e0fee727b:0x661a500633770d55!8m2!3d47.7256565!4d10.3194254)">Google Maps</a>
-        </div>
-    </div>
-  
-  </div>
 
-  <div class="content_rueckmeldung">
-    <h1>Zusage</h1>
-    <!-- <h3>Um uns das Planen zu erleichtern, bitte wir um eure Antwort bis spätestens 31.07.2022.</h3> -->
-    <p>Um uns das Planen zu erleichtern, <br> bitte wir um eure Antwort bis <br> spätestens 31.07.2022. </p>
-    
-    <button type="button">Zu den Kontaktdaten</button>
-  </div>
-  
-<!--     <div class="social_einladung">
-      <ul>
-        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-        <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
-      </ul>
+            <i class="fas fa-envelope"></i>
+            <p2>info@maesers.de</p2>
+
+            <i class="fas fa-phone"></i>
+            <p2>+49 (0)8370 206</p2>
+        </div>
+
     </div>
-  </div> -->
   
+  </div>
+</div>
 </body>
 </html>
 
