add maesers anfahrt

--- a/tagesablauf.html
+++ b/tagesablauf.html
@@ -34,6 +34,7 @@
               <li><a href="index.html">Home</a></li>
               <li><a href="einladung.html">Einladung</a></li>
               <li><a class="active" href="tagesablauf.html">Tagesablauf</a></li>
+              <li><a href="anfahrt.html">Anfahrt</a></li>
               <li><a href="uebernachtung.html">Übernachtung</a></li>
               <li><a href="trauzeugen.html">Trauzeugen</a></li>
               <li><a href="kontakt.html">Kontakt</a></li>
@@ -98,46 +99,6 @@
 
     </div>
     </div>
-
-<!-- Anfahrt -->
-
-<div class="content_anfahrt">
-<h1>Anfahrt</h1>
-<h3>Wegbeschreibung und Google Maps:</h3>
- <div class="anfahrt-content">
-   
-      <!-- Box 1 -->
-      <div class="anfahrt-box">
-        <i class="fas fa-church"></i>
-          <h3>St. Mang Kirche Kempten</h3>
-          <p>St.-Mang-Platz 4, 87435 Kempten</p>
-          <a href="https://www.google.de/maps/place/St.-Mang-Kirche/@47.7257913,10.3187387,351m/data=!3m1!1e3!4m5!3m4!1s0x479c790e0fee727b:0x661a500633770d55!8m2!3d47.7256565!4d10.3194254)">Google Maps</a>
-      </div>
-      <!-- Box 2 -->
-      <div class="anfahrt-box">
-        <i class="fas fa-parking"></i>
-          <h3>Parkhaus am Rathaus</h3>
-          <p>Kronenstr. 16, 87435 Kempten</p>
-          <a href="#">Google Maps</a>
-      </div>
-      <!-- Box 3 -->
-      <div class="anfahrt-box">
-        <i class="fas fa-glass-cheers"></i>
-          <h3>Mäser's Allgäuherz</h3>
-          <p>Marktpl. 1, 87487 Wiggensbach</p>
-          <a href="#">Google Maps</a>
-      </div>
-      <!-- Box 4 -->
-      <div class="anfahrt-box">
-        <i class="fas fa-parking"></i>
-          <h3>Parkhaus am Marktplatz</h3>
-          <p>Marktpl. 5, 87487 Wiggensbach</p>
-          <a href="#">Google Maps</a>
-
-      </div>
-  </div>
-
-</div>
   
 <!--     <div class="social_einladung">
       <ul>
