--- a/trauzeugen.html
+++ b/trauzeugen.html
@@ -34,6 +34,7 @@
               <li><a href="index.html">Home</a></li>
               <li><a href="einladung.html">Einladung</a></li>
               <li><a href="tagesablauf.html">Tagesablauf</a></li>
+              <li><a href="anfahrt.html">Anfahrt</a></li>
               <li><a href="uebernachtung.html">Übernachtung</a></li>
               <li><a class="active" href="trauzeugen.html">Trauzeugen</a></li>
               <li><a href="kontakt.html">Kontakt</a></li>
