--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <li><a class="active" href="index.html">Home</a></li>
               <li><a href="einladung.html">Einladung</a></li>
               <li><a href="tagesablauf.html">Tagesablauf</a></li>
-              <li><a href="tagesablauf.html">Anfahrt</a></li>
+              <li><a href="anfahrt.html">Anfahrt</a></li>
               <li><a href="uebernachtung.html">Übernachtung</a></li>
               <li><a href="trauzeugen.html">Trauzeugen</a></li>
               <li><a href="kontakt.html">Kontakt</a></li>
