add tablet view media queries

--- a/kontakt.html
+++ b/kontakt.html
@@ -43,9 +43,9 @@
       </nav>
   </header>
 
-    <div class="bg">
+<!--     <div class="bg">
       <img src="img/home_v9.png">
-    </div>
+    </div> -->
 
     <!-- Kontakt -->
 
