--- a/tagesablauf.html
+++ b/tagesablauf.html
@@ -43,9 +43,9 @@
       </nav>
   </header>
 
-    <div class="bg">
+<!--     <div class="bg">
       <img src="img/home_v9.png">
-    </div>
+    </div> -->
 
 <!-- Tagesablauf -->
 
@@ -86,14 +86,14 @@
         <div class="box">
             <i class="fas fa-shuttle-van"></i>
             <span>01:00 Uhr</span>
-            <h3>Shuttle #1</h3>
+            <h3>Shuttle 01:00 Uhr</h3>
             <p>Wir bieten euch einen Shuttle-Service nachts zum Hotel an. Don't drink and drive!</p>
         </div>
 
         <div class="box">
             <i class="fas fa-shuttle-van"></i>
             <span>02:00 Uhr</span>
-            <h3>Shuttle #2</h3>
+            <h3>Shuttle 02:00 Uhr</h3>
             <p>Wir bieten euch einen Shuttle-Service nachts zum Hotel an. Don't drink and drive!</p>
         </div>
 
