--- a/einladung.html
+++ b/einladung.html
@@ -73,9 +73,9 @@
       
       </div>
 
-<!--     <div class="slogan">
+    <div class="slogan">
       <p>"Die Ehe ist und bleibt die schönste <br> Entdeckungsreise, die der Mensch <br> unternehmen kann."</p>  
-    </div> -->
+    </div>
   
 <!--     <div class="social_einladung">
       <ul>
