--- a/anfahrt.html
+++ b/anfahrt.html
@@ -51,7 +51,7 @@
 
 <div class="content_anfahrt">
 <h1>Anfahrt</h1>
-<h3>Wegbeschreibung und Google Maps:</h3>
+<h3>Wegbeschreibung und <br> Google Maps:</h3>
  <div class="anfahrt-content">
    
       <!-- Box 1 -->
