--- a/einladung.html
+++ b/einladung.html
@@ -76,14 +76,12 @@
     <div class="slogan">
       <p>"Die Ehe ist und bleibt die schönste <br> Entdeckungsreise, die der Mensch <br> unternehmen kann."</p>  
     </div>
-  
-<!--     <div class="social_einladung">
+
+    <div class="social_einladung">
       <ul>
-        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-        <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
+        <li><a href="https://drive.google.com/file/d/1SJnXeLPOYwHTqhQLyyTy8q6XIGZgNO3Q/view?usp=sharing"><i class="fas fa-file-download"></i></a></li>
       </ul>
-    </div> -->
+    </div>
   </div>
   
 </body>
