--- a/einladung.html
+++ b/einladung.html
@@ -79,7 +79,7 @@
 
     <div class="social_einladung">
       <ul>
-        <li><a href="https://drive.google.com/file/d/1SJnXeLPOYwHTqhQLyyTy8q6XIGZgNO3Q/view?usp=sharing"><i class="fas fa-file-download"></i></a></li>
+        <li><a href="https://www.dropbox.com/s/df5wq6mq8ng7x7f/hochzeitcaroundgregor.ics?dl=1"><i class="fas fa-file-download"></i></a></li>
       </ul>
     </div>
   </div>
