--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 
       <div class="social">
       <ul>
-        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-        <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
+        <li><a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=N21wOGU4YzQzM2NpcjY1NmQxNTRlODg0czQgZ3JlZ29yc3RyYWVobGVAZ29vZ2xlbWFpbC5jb20&tmsrc=gregorstraehle%40googlemail.com"><i class="fas fa-file-download"></i></a></li>
+        <li><a href="#"><i class="fas fa-phone"></i></a></li>
+        <li><a href="#"><i class="fas fa-envelope"></i></a></li>
       </ul>
     </div>
 
