neuer master stand

--- a/einladung.html
+++ b/einladung.html
@@ -77,11 +77,11 @@
       <p>"Die Ehe ist und bleibt die schönste <br> Entdeckungsreise, die der Mensch <br> unternehmen kann."</p>  
     </div>
 
-    <div class="social_einladung">
+<!--     <div class="social_einladung">
       <ul>
         <li><a href="https://www.dropbox.com/s/df5wq6mq8ng7x7f/hochzeitcaroundgregor.ics?dl=1"><i class="fas fa-file-download"></i></a></li>
       </ul>
-    </div>
+    </div> -->
   </div>
   
 </body>
