--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
       <div class="social">
       <ul>
         <li><a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=N21wOGU4YzQzM2NpcjY1NmQxNTRlODg0czQgZ3JlZ29yc3RyYWVobGVAZ29vZ2xlbWFpbC5jb20&tmsrc=gregorstraehle%40googlemail.com"><i class="fas fa-file-download"></i></a></li>
-        <li><a href="#"><i class="fas fa-phone"></i></a></li>
-        <li><a href="#"><i class="fas fa-envelope"></i></a></li>
+        <li><a href="kontakt.html"><i class="fas fa-phone"></i></a></li>
+        <li><a href="kontakt.html"><i class="fas fa-envelope"></i></a></li>
       </ul>
     </div>
 
