Fixed links on kontakt page and support tel and mailto handler

--- a/kontakt.html
+++ b/kontakt.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
-</head> 
+</head>
 <body>
   <div class="hero">
 
@@ -25,7 +25,7 @@
 
               <label class="logo-txt">Hochzeitseinladung</label>
           </div>
-          
+
           <input type="checkbox" id="check">
           <label for="check" class="hamburger-btn">
               <i class="fas fa-bars"></i>
@@ -54,7 +54,6 @@
   <h3>Get in touch</h3>
 
    <div class="kontakt-content">
-     
         <!-- Box 1 -->
         <div class="kontakt-box">
           <div class="kontakt-img">
@@ -63,25 +62,29 @@
           </div>
             <h3>Caro und Gregor</h3>
             <p>Gute Ideen oder Beiträge für unsere Feier? Bitte wendet euch gerne an uns oder unsere Trauzeugen. Wir freuen uns auf diesen besonderen Tag mit euch!</p>
-            <i class="fas fa-envelope"></i>
-            <p2>gregorstraehle@gmail.com</p2>
+            <p>
+              <i class="fas fa-envelope"></i>
+              <a href="mailto:gregorstraehle@gmail.com">gregorstraehle@gmail.com</a>
+            </p>
+            <p>
+              <i class="fas fa-phone"></i>
+              <a href="tel:+491707331325">+49-170-7331325</a>
+            </p>
 
-            <i class="fas fa-phone"></i>
-            <p2>+49-170-7331325</p2>
+            <p>
+              <i class="fas fa-envelope"></i>
+              <a href="mailto:straehle.carolin@web.de">straehle.carolin@web.de</a>
+            </p>
 
-            <i class="fas fa-envelope"></i>
-            <p2>straehle.carolin@web.de</p2>
-
-            <i class="fas fa-phone"></i>
-            <p2>+49-159-08108272</p2>
+            <p>
+              <i class="fas fa-phone"></i>
+              <a href="tel:+4915908108272">+49-159-08108272</a>
+            </p>
         </div>
 
     </div>
-  
   </div>
 
 </div>
 </body>
 </html>
-
-
