add annick quote

--- a/trauzeugen.html
+++ b/trauzeugen.html
@@ -73,7 +73,7 @@
             <img src="img/Annick.jpg">
           </div>
             <h3>Annick Ochel</h3>
-            <p>"Annick und ich kennen uns schon viele Jahre. Zusammen haben wir eine Menge erlebt! Um so mehr weiß ich, dass ich mich an unserem besonderen Tag auf ihn verlassen kann!" <br>- Caro.</p>
+            <p>"Du bist die Freundin die immer für mich da ist, die mir stets zuhört, dir mir am wichtigsten ist, die mich versteht. Dafür danke ich Dir." <br>- Caro.</p>
             <i class="fas fa-envelope"></i>
             <p2>annick.ochel@gmail.com</p2>
 
